src/objects/inscor__Work_Instruction_Skill__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <referenceTo>inscor__Skill__c</referenceTo>
        <relationshipLabel>Work Instruction Skills</relationshipLabel>
        <relationshipName>Work_Instruction_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Instruction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Instruction</label>
        <referenceTo>inscor__Work_Instructions__c</referenceTo>
        <relationshipLabel>Work Instruction Skills</relationshipLabel>
        <relationshipName>Work_Instruction_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Instruction Skill</label>
    <nameField>
        <displayFormat>WOS-{0}</displayFormat>
        <label>Work Instruction Skill ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Instruction Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>